# systeme-local

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.sandbox  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  policy.yaml  providers.example.yaml  pyproject.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-integration.yml  evidence-governance.yml
crates/audit-watchdog/: Cargo.toml  README.md
crates/audit-watchdog/src/: digest.rs  error.rs  lib.rs  main.rs  model.rs  verify.rs  windows.rs  windows_contract.rs  windows_snapshot.ps1
crates/audit-watchdog/tests/: verification.rs
crates/operator-evidence-custodian/: Cargo.toml
crates/operator-evidence-custodian/src/: commitment.rs  error.rs  lib.rs  main.rs  protocol.rs  sanitizer.rs  sanitizer_profile.rs  session.rs  source.rs  staging.rs
crates/operator-evidence-custodian/tests/: conformance.rs  controlled_staging.rs  deterministic_sanitization.rs  sanitizer_profiles.rs  session_lifecycle.rs  source_commitment.rs  source_custody.rs
docs/: architecture.md  blueprint-v2.md  connectivity-model.md  documentation-governance.md  github-governance.md  index.md  operator-evidence-custodian-protocol.md  operator-evidence-session-lifecycle.md  operator-evidence-staging.md  provider-attachments.md  provider-context-registry.md  provider-package-audit.md  roadmap.md  rust-audit-watchdog.md  threat-model.md  windows-audit-witness.md
docs/adr/: 0001-provider-channel-separation.md  0002-local-canonical-provider-context.md  0003-evidence-bound-chatgpt-mcp-readiness.md  0004-raw-provider-evidence-exclusion.md  0005-python-rust-operator-evidence-custody.md
docs/providers/: chatgpt-mcp-connection-readiness.md  chatgpt-mcp-deployment.md  chatgpt-mcp-operator-evidence.md  chatgpt.md
examples/: sign_task.py
governance/: evidence-profiles.toml  github-settings-snapshot.json  mypy-baseline.json  ruff-format-baseline.txt
protocol/: task-envelope.schema.json
scripts/: audit_python_dependencies.py  check_evidence_governance.py  check_markdown_links.py  check_python_format.py  check_python_typing.py
src/systeme_local_gateway/: __init__.py  approvals.py  audit.py  audit_anchor.py  audit_runtime.py  auth.py  config.py  executor.py  main.py  mcp_runtime.py  mcp_smoke.py  mcp_tools.py  models.py  paths.py  policy.py  sandbox.py  task_processor.py
src/systeme_local_gateway/adapters/: __init__.py  base.py  glm_zai.py
src/systeme_local_gateway/brains/: __init__.py  models.py  router.py
src/systeme_local_gateway/providers/: __init__.py  _canonicalization.py  attachment_commit.py  attachment_models.py  attachment_policy.py  chatgpt_mcp_deployment.py  chatgpt_mcp_operator_evidence.py  chatgpt_mcp_readiness.py  context_models.py  context_policy.py  context_store.py  fake_attachment_provider.py  fake_chatgpt.py  fake_chatgpt_context.py  mcp_deployment_models.py  mcp_operator_evidence_models.py  mcp_readiness_models.py  models.py  state_machine.py  store.py
src/systeme_local_gateway/providers/_operator_evidence/: __init__.py  models.py  runner.py
tests/: conftest.py  test_anchor_runtime_activation.py  test_approvals.py  test_attachment_commit.py  test_attachment_models.py  test_attachment_policy.py  test_audit.py  test_audit_anchor.py  test_audit_anchor_cli.py  test_audit_anchor_runtime.py  test_auth.py  test_brain_router.py  test_chatgpt_mcp_deployment.py  test_chatgpt_mcp_deployment_docs.py  test_chatgpt_mcp_operator_evidence.py  test_chatgpt_mcp_operator_evidence_docs.py  test_chatgpt_mcp_readiness.py  test_chatgpt_mcp_readiness_docs.py  test_config_anchor.py  test_documentation_governance.py  test_executor.py  test_fake_attachment_provider.py  test_fake_chatgpt_context.py  test_fake_chatgpt_provider.py  test_main_approval_flow.py  test_main_error_redaction.py  test_mcp_config.py  test_mcp_deployment_models.py  test_mcp_operator_evidence_models.py  test_mcp_readiness_models.py  test_mcp_runtime.py  test_mcp_smoke.py  test_mcp_smoke_subprocess.py  test_mcp_tools.py  test_models.py  test_operator_evidence_custodian_protocol.py  test_paths.py  test_policy.py  test_provider_attachment_docs.py  test_provider_canonicalization_compatibility.py  (+11 more)
tests/fixtures/: provider_canonicalization_compatibility_v1.json
tests/fixtures/operator_evidence_custodian/: invalid_cases.json  valid_request.ndjson  valid_response.ndjson
tests/integration/: test_docker_sandbox.py
