[workspace]
members = [
    "crates/audit-watchdog",
    "crates/operator-evidence-custodian",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.97.1"
license = "Apache-2.0"
authors = ["Système Local contributors"]
repository = "https://github.com/Cheurteenyt/systeme-local"
publish = false

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
time = { version = "0.3", default-features = false, features = ["parsing"] }

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "forbid"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
