[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "systeme-local-agent-gateway"
version = "0.1.0"
description = "Secure capability gateway between remote AI agents and a local sandbox"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Système Local contributors" }]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "mcp>=1.27.2,<2",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "PyYAML>=6.0,<7",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/systeme_local_gateway"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: requires a live Docker Engine and the sandbox image",
]

[tool.ruff]
line-length = 100
target-version = "py311"
