[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "systeme-local-agent-gateway"
version = "0.1.0"
description = "Secure capability gateway between remote AI agents and a local sandbox"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Système Local contributors" }]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "mcp>=1.27.2,<2",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "PyYAML>=6.0,<7",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "mypy==1.20.2",
  "pip-audit==2.10.1",
  "pytest>=9.0.3,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "uv==0.11.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/systeme_local_gateway"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: requires a live Docker Engine and the sandbox image",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
cache_dir = ".systeme-local/mypy-cache"
plugins = ["pydantic.mypy"]
files = [
  "scripts",
  "src/systeme_local_gateway/providers/mcp_deployment_models.py",
  "src/systeme_local_gateway/providers/mcp_operator_evidence_models.py",
  "src/systeme_local_gateway/providers/mcp_readiness_models.py",
  "src/systeme_local_gateway/providers/models.py",
]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.uv]
required-version = "0.11.29"
