[package]
name = "systeme-local-audit-watchdog"
version = "0.1.0"
description = "Independent non-secret verifier for Système Local audit-anchor witnesses"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true

[lints]
workspace = true
